<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sesame</string>
    <string name="start_check_energy">Start check energy</string>
    <color name="color_alpha">#00000000</color>
    <color name="color_btn_down">#F0F0F0</color>

    <string name="hello_user">Hello User!</string>
    <string name="base_configuration">BASE CONFIGURATION</string>
    <string name="immediate_effect">Immediate effect</string>
    <string name="record_log">Record log</string>
    <string name="show_toast">Show toast</string>
    <string name="stay_awake">Stay awake</string>
    <string name="timeout_restart_activity">Restart activity when timeout</string>
    <string name="forest_configuration">FOREST CONFIGURATION</string>
    <string name="collect_energy">Collect energy</string>
    <string name="check_interval_minutes">Check interval (minutes)</string>
    <string name="thread_count">Thread count</string>
    <string name="advance_time_milliseconds">Advance time (milliseconds)</string>
    <string name="collect_interval_milliseconds">Collect interval (milliseconds)</string>
    <string name="collect_timeout_seconds">Collect timeout (seconds)</string>
    <string name="return_water_33">Return water 33</string>
    <string name="return_water_18">Return water 18</string>
    <string name="return_water_10">Return water 10</string>
    <string name="help_friend_collect">Help friend collect</string>
    <string name="don_t_help_collect_list">Don\'t help collect list</string>
    <string name="don_t_collect_list">Don\'t collect list</string>
    <string name="receive_forest_task_award">Receive forest task award</string>
    <string name="water_friend_list">Water friend list</string>
    <string name="cooperate_water">Cooperate water</string>
    <string name="cooperate_water_list">Cooperate water list</string>
    <string name="farm_configuration">FARM CONFIGURATION</string>
    <string name="enable_farm">Enable farm</string>
    <string name="reward_friend">Reward friend</string>
    <string name="send_back_animal">Send back animal</string>
    <string name="send_type">Send type</string>
    <string name="don_t_send_friend_list">Don\'t send friend list</string>
    <string name="recall_animal_type">Recall animal type</string>
    <string name="receive_farm_tool_reward">Receive farm tool reward</string>
    <string name="record_farm_game">Record farm game</string>
    <string name="kitchen">Kitchen</string>
    <string name="use_new_egg_tool">Use new egg tool</string>
    <string name="harvest_produce">Harvest produce</string>
    <string name="answer_question">Answer question</string>
    <string name="donation">Donation</string>
    <string name="receive_farm_task_award">Receive farm task award</string>
    <string name="feed_animal">Feed animal</string>
    <string name="use_accelerate_tool">Use accelerate tool</string>
    <string name="feed_friend_animal_list">Feed friend animal list</string>
    <string name="notify_friend">Notify friend</string>
    <string name="don_t_notify_friend_list">Don\'t notify friend list</string>
    <string name="other_configuration">OTHER CONFIGURATION</string>
    <string name="receive_point">Receive point</string>
    <string name="open_treasure_box">Open treasure box</string>
    <string name="receive_coin_asset">Receive coin asset</string>
    <string name="donate_charity_coin">Donate charity coin</string>
    <string name="min_exchange_count">Min exchange count</string>
    <string name="latest_exchange_time_24_hour_system">Latest exchange time (24-hour system)</string>
    <string name="koubei_sign_in">Koubei sign in</string>
    <string name="more">MORE</string>
    <string name="support_developer">Support developer</string>
    <string name="support_xqe_developer">Support XQE developer</string>
    <string name="forest_log">Forest log</string>
    <string name="farm_log">Farm log</string>
    <string name="other_log">Other log</string>
    <string name="unactivated">UNACTIVATED</string>
    <string name="tips">Tips</string>
    <string name="hide_the_application_icon">Hide the application icon</string>
    <string name="export_the_statistic_file">Export the statistic file</string>
    <string name="import_the_statistic_file">Import the statistic file</string>
    <string name="settings">Settings</string>
    <string name="limit_collect">Limit collect</string>
    <string name="limit_count_per_minute">Limit count per minute</string>
    <string name="energy_rain">Energy Rain</string>
    <string name="give_energy_rain_list">Give energy rain list</string>
// lzw add begin
    <string name="collect_energy_on_wee_hours">Collect energy_on_wee_hours</string>
    <string name="master_id_list">Master id list</string>
    <string name="sub_id_list">Sub id list</string>
    <string name="only_collect_energy_time">Only collect energy time</string>    
// lzw  add end    
    <string name="sync_step_count">Sync Step Count</string>
    <string name="stay_awake_type">Stay awake type</string>
    <string name="use_double_card">Use double card</string>
    <string name="wait_when_exception">Wait when exception(Min)</string>
    <string name="stay_awake_target">Stay awake target</string>
    <string name="search">Search</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="open_with_other_browser">Open with other browser</string>
    <string name="copy_the_url">Copy the url</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="choose_a_browser">Choose a browser</string>
    <string name="copy_success">Copy success</string>
    <string name="cancel">Cancel</string>
    <string name="collect_watering_bubble">Collect watering bubble</string>
    <string name="collect_prop">Collect prop</string>
    <string name="use_double_card_time">Use double card time</string>
    <string name="use_double_card_time_desc">For example: (0000-0100, 0700-0730) represents 0 to 1 p.m. and 7 to 7:30 a.m., when there is energy and the card is automatically used without using double click</string>
    <string name="animal_sleep_time">Animal sleep time</string>
    <string name="visit_github">Visit GitHub</string>
    <string name="exchange_energy_double_click">Exchange energy double click</string>
    <string name="exchange_energy_double_click_count">Exchange energy double click count</string>
    <string name="reserve">Reserve</string>
    <string name="reserve_list">Reserve list</string>
    <string name="eco_life_tick">Eco life tick</string>
    <string name="ancient_tree">Ancient tree</string>
    <string name="ancient_tree_area_code_list">Ancient tree area code list</string>
    <string name="ancient_tree_only_week">Ancient tree only week</string>
    <string name="antdodo_collect">Antdodo collect</string>
    <string name="ant_ocean">Ant ocean</string>
    <string name="water_friend_count">Water friend count</string>
    <string name="the_image_of_main" translatable="false">The image of main</string>
    <string name="the_image_of_unactivated" translatable="false">The image of unactivated</string>
    <string name="beach">Beach</string>
    <string name="beach_list">Beach list</string>
    <string name="test">Test</string>
    <string name="timeout_restart_type">Timeout restart type</string>
    <string name="start_at_7_o_clock">Start at 7 o\'clock</string>
    <string name="tiyubiz">Tiyubiz</string>
    <string name="friend_watch">Friend watch</string>
    <string name="user_patrol">User patrol</string>
    <string name="toast_vertical_offset">Toast vertical offset</string>
    <string name="animal_game_time">Animal game time</string>
    <string name="animal_consume_prop">Animal consume prop</string>
    <string name="double_count_limit">Double count limit</string>
    <string name="ins_blue_bean_exchange">Ins blue bean exchange</string>
    <string name="enable_on_going">Enable on going</string>
    <string name="backup_runtime_log">Backup runtime log</string>
    <string name="language_simplified_chinese">Chinese Language</string>
    <string name="language_simplified_chinese_need_restart">Need to restart the app to take effect</string>
    <string name="ant_orchard">Ant orchard</string>
    <string name="receive_orchard_task_award">Receive orchard task award</string>
    <string name="orchard_spread_manure_count">Orchard spread manure count</string>
    <string name="who_you_want_to_give_to">Who you want to give to</string>
    <string name="collect_sesame">Collect sesame</string>
    <string name="zcj_sign_in">Zcj sign in</string>
    <string name="merchant_kmdk">Merchant kmdk</string>
    <string name="enable_stall">Enable stall</string>
    <string name="stall_auto_close">Stall auto close</string>
    <string name="stall_auto_open">Stall auto open</string>
    <string name="stall_auto_task">Stall auto task</string>
    <string name="stall_receive_award">Stall receive award</string>
    <string name="accept_gift">Accept gift</string>
    <string name="visit_friend_list">Visit friend list</string>
    <string name="stall_open_type">Stall open type</string>
    <string name="stall_open_list">Stall open list</string>
    <string name="stall_white_list">Stall white list</string>
    <string name="stall_allow_open_time">Stall allow open time</string>
    <string name="stall_self_open_time">Stall self open time</string>
    <string name="stall_black_list">Stall black list</string>
    <string name="chicken_diary">Chicken diary</string>
    <string name="stall_donate">Stall donate</string>
    <string name="collect_gift_box">Collect gift box</string>
    <string name="stall_invite_register">Stall invite register</string>
    <string name="stall_invite_shop_list">Stall invite shop list</string>
    <string name="stall_throw_manure">Stall throw manure</string>
    <string name="green_finance">Green finance</string>
    <string name="total_cert_count">Total cert count</string>
    <string name="send_friend_card">Send friend card</string>
    <string name="batch_rob_energy">Batch rob energy</string>
    <string name="select_all">Select All</string>
    <string name="select_invert">Select Invert</string>
    <string name="close">Close</string>
    <string name="ant_book_read">Ant book Read</string>
    <string name="omegakoi_town">Omegakoi Town</string>
    <string name="consume_gold">Consume Gold</string>
    <string name="use_special_food">Use Special Food</string>

</resources>
